<resources>
    <string name="app_name">ProyectoZoomX</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send">SEND</string>
    <string name="enviar">ENVIAR</string>
    <string name="usuario">Usuario</string>
    <string name="busqueda_salas">Busqueda Salas</string>
    <string name="opciones">Opciones</string>
    <string name="salir">Salir</string>
    <string name="abm_salas">ABM Salas</string>
    <string name="nombre">Nombre</string>
    <string name="responsable">Responsable</string>
    <string name="fecha_reserva">Fecha Reserva</string>
    <string name="tiempo_de_reserva">Tiempo de Reserva</string>
    <string name="url_de_icono">URL de Icono</string>
    <string name="ingresar">ingresar</string>
    <string name="guardar">guardar</string>
    <string name="regresar">regresar</string>
    <string name="ingresar_sala">Ingresar sala</string>
    <string name="modificar">Modificar</string>
    <string name="id_a_buscar">Id a Buscar</string>
    <string name="buscar">Buscar</string>
    <string name="modificar_sala">MODIFICAR SALA</string>
    <string name="config">Config</string>
    <string name="password">Password</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="actualizar">Actualizar</string>
    <string name="registrar">Registrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="configuracion">Configuracion</string>

    <string name="ingrese_nombre_sala">Ingrese Nombre Sala</string>
    <string name="buscar_por_nombre">Buscar por Nombre</string>
    <string name="ingrese_responsable_sala">Ingrese Responsable Sala</string>
    <string name="buscar_por_responsable">Buscar por Responsable</string>
    <string name="ingrese_fecha_reserva">Ingrese Fecha Reserva</string>
    <string name="buscar_por_fecha">Buscar por Fecha</string>
    <string name="volver">Volver</string>
    <string name="Ingrese_Password">Ingrese Password</string>

    <string name="id_a_eliminar">Id a Eliminar</string>

    <string name="ingrese_puerto">Ingrese Puerto</string>
    <string name="ingrese_url">Ingrese Url</string>

    <string name="Guardar">Guardar</string>
    <string name="buscar_sala">Buscar Sala</string>
    <string name="atraz">Atraz</string>
    <string name="eliminar_sala">Eliminar Sala</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="eliminarr">Eliminarr</string>

</resources>
