<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModificarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_a_buscar"
        android:inputType="number"
        android:autofillHints="no"/>

    <Button
        android:id="@+id/btn_BuscarPorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar_por_id" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/responsable"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="2020-11-10T10:00 "
        android:inputType="datetime"
        android:text="@string/fecha_reserva"
        android:textSize="20sp"
        android:autofillHints="no"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text="@string/tiempo_de_reserva"
        android:textSize="20sp"
        android:autofillHints="no"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url_de_icono"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_guardarModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_sala" />

    <Button
        android:id="@+id/btn_regresarModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regresar" />

</LinearLayout>