<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_Principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="?android:attr/textColorPrimaryInverse"
    android:gravity="center"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical"
    tools:context=".ZoomMenuPrincipalActivity">

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#536DFE"
        android:text="Registrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#536DFE"
        android:text="Actualizar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_Eliminar"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#536DFE"
        android:text="Eliminar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_busqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#536DFE"
        android:text="@string/busqueda_salas"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#536DFE"
        android:text="Configuracion"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#536DFE"
        android:onClick="@string/ingresar"
        android:text="@string/salir"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>